# discord-bot

./: .env  .gitignore  README.md  pyproject.toml
src/: main.py
